--- a/css/layout.css
+++ b/css/layout.css
@@ -59,7 +59,7 @@ header .banner {
 header .banner-text { width: 100%; }
 header .banner-text h1 {
    font: 90px/1.0em 'opensans-bold', sans-serif;
-   color: #8ea4b1;
+   color: #ffffff;
    letter-spacing: -2px;
    margin: 0 auto 18px auto;
    text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
